--- a/BolWallet/Controls/ExtendedTextEdit.xaml
+++ b/BolWallet/Controls/ExtendedTextEdit.xaml
@@ -3,30 +3,32 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BolWallet.Controls.ExtendedTextEdit"
              x:Name="this">
-    <ContentView.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Frame Grid.Row="0"  ZIndex="1" BorderColor="{Binding FocusedBorderColor, Source={x:Reference this}}" Padding="8,0,0,0" CornerRadius="5">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="8*" />
-                        <ColumnDefinition Width="2*" />
-                    </Grid.ColumnDefinitions>
-                    
-                    <Entry x:Name="eEntry" Grid.Column="0" 
+    <Grid HorizontalOptions="Fill" 
+            BackgroundColor="Transparent"
+            ColumnSpacing="0"
+            RowSpacing="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Border Margin="1,1,5,1"
+                        Padding="8,0,0,0" BackgroundColor="Transparent"  HorizontalOptions="FillAndExpand" StrokeThickness="1"
+                        Stroke="{Binding FocusedBorderColor, Source={x:Reference this}}"
+                        >
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="5" />
+            </Border.StrokeShape>
+            <Grid HorizontalOptions="FillAndExpand" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="{OnPlatform Android=6*, iOS=6*, MacCatalyst=9*, WinUI=9*}" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Entry x:Name="eEntry" HorizontalOptions="FillAndExpand"
                        Completed="Handle_Completed" 
                        Text="{Binding Text, Source={x:Reference this}, Mode=TwoWay}"
-
                        FontSize="{Binding FontSize, Source={x:Reference this}}"
                        ReturnCommand="{Binding ReturnCommand, Source={x:Reference this}}"
                        ReturnCommandParameter="{Binding ReturnCommandParameter, Source={x:Reference this}}"
-                       
                        ReturnType="{Binding ReturnType, Source={x:Reference this}}"
                        IsPassword="{Binding IsPassword, Source={x:Reference this}}"
                        Keyboard="{Binding Keyboard, Source={x:Reference this}}"
@@ -37,11 +39,11 @@
                        TextTransform="{Binding TextTransform, Source={x:Reference this}}"
                        ZIndex="2"
                        >
-                        <Entry.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"
+                    <Entry.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"
                                 NumberOfTapsRequired="{Binding NumberOfTapsRequired, Source={x:Reference this}}" />
-                        </Entry.GestureRecognizers>
-                        <!--TextChanged ="Handle_TextChanged"
+                    </Entry.GestureRecognizers>
+                    <!--TextChanged ="Handle_TextChanged"
                     CharacterSpacing, of type double, sets the spacing between characters in the entered text.
 CursorPosition, of type int, defines the position of the cursor within the entry.
 FontAttributes, of type FontAttributes, determines text style.
@@ -57,34 +59,32 @@ IsSpellCheckEnabled, of type bool, controls whether spell checking is enabled.
 MaxLength, of type int, defines the maximum input length.
                     TextColor="#374955"
                     BackgroundColor="#E6F4F1"
-                   --> 
-                    </Entry>
-                    <Label x:Name="LabelTitle" 
-                        Text="{Binding LabelText, Source={x:Reference this}}" 
-                        TextColor="{Binding PlaceholderColor, Source={x:Reference this}}" 
-                        ZIndex="3"
-                        BackgroundColor="White"
-                        VerticalOptions="Center">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="Handle_Tapped" />
-                        </Label.GestureRecognizers>
-                    </Label>
-                    <Label Grid.Column="1" Margin="0,8,0,0" 
+                   -->
+                </Entry>
+                <Label Margin="0,8,0,0" Grid.Column="1"
                         Text="{Binding EndIcon.Glyph, Source={x:Reference this}}"
                         TextColor="{Binding EndIconColor, Source={x:Reference this}}"
                         FontFamily="{Binding EndIcon.FontFamily, Source={x:Reference this}}"
                         FontSize="{Binding EndIcon.Size, Source={x:Reference this}}" 
                         ZIndex="4"/>
-                </Grid>
-            </Frame>
-            <Label Grid.Row="1" 
+            </Grid>
+        </Border>
+        <Label x:Name="LabelTitle" Margin="0,0,25,0"
+                        Text="{Binding LabelText, Source={x:Reference this}}" 
+                        TextColor="{Binding PlaceholderColor, Source={x:Reference this}}" 
+                        ZIndex="3"
+                        BackgroundColor="White"
+                        VerticalOptions="Center">
+            <Label.GestureRecognizers>
+                <TapGestureRecognizer Tapped="Handle_Tapped" />
+            </Label.GestureRecognizers>
+        </Label>
+        <Label Grid.Row="1" 
                 Text="{Binding ErrorText, Source={x:Reference this}}" 
                 IsVisible="{Binding HasError, Source={x:Reference this}, Mode = OneWay}"
                 TextColor="{Binding ErrorColor, Source={x:Reference this}, Mode = OneWay}"
                 BackgroundColor="White"
                 VerticalOptions="Center" 
                 HorizontalOptions="FillAndExpand" />
-        </Grid>
-
-    </ContentView.Content>
+    </Grid>
 </ContentView>
