--- a/BolWallet/Views/MainPage.xaml
+++ b/BolWallet/Views/MainPage.xaml
@@ -4,24 +4,27 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:MainViewModel"
-	xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-    BackgroundColor="{DynamicResource SecondaryColor}">
-
-	<ScrollView>
-		<Grid
+    xmlns:controls1="clr-namespace:BolWallet.Controls"
+    BackgroundColor="{DynamicResource SecondaryColor}"
+    x:Name="this">
+    <ContentPage.BindingContext>
+        <viewModels:RadialControlViewModel />
+    </ContentPage.BindingContext>
+    <ScrollView>
+        <Grid
             Padding="{OnPlatform iOS='30,60,30,30',
                                  Default='30'}"
-            RowDefinitions="Auto,Auto,Auto,Auto,*"
+            RowDefinitions="Auto,Auto,Auto,*"
             RowSpacing="25">
 
-			<Label
+            <Label
                 Grid.Row="0"
                 FontSize="32"
                 HorizontalOptions="Center"
                 SemanticProperties.HeadingLevel="Level1"
                 Text="Welcome to Bol!" />
 
-			<Image
+            <Image
                 Grid.Row="1"
                 HeightRequest="310"
                 HorizontalOptions="Center"
@@ -29,7 +32,7 @@
                 Source="bol_logo"
                 WidthRequest="250" />
 
-			<Button
+            <Button
                 Grid.Row="2"
                 Command="{Binding NavigateToCodenamePageCommand}"
                 FontAttributes="Bold"
