--- a/BolWallet/Views/MainPage.xaml
+++ b/BolWallet/Views/MainPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:MainViewModel"
+	xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     BackgroundColor="{DynamicResource SecondaryColor}">
 
 	<ScrollView>
@@ -35,6 +36,12 @@
                 HorizontalOptions="Center"
                 Text="Let's get started" />
 
+			<Button
+             Grid.Row="3"
+             Command="{Binding ImportYourWalletCommand}"
+             FontAttributes="Bold"
+             HorizontalOptions="Center"
+             Text="Import Your Wallet" />
 		</Grid>
 	</ScrollView>
 </ContentPage>
