Enable navigation to newly created Account Page

--- a/BolWallet/Views/MainWithAccountPage.xaml
+++ b/BolWallet/Views/MainWithAccountPage.xaml
@@ -48,6 +48,7 @@
 			<Button
                 Grid.Row="4"
                 Grid.ColumnSpan="3"
+                Command="{Binding NavigateToUserPageCommand}"
                 FontAttributes="Bold"
                 FontSize="8"
                 HorizontalOptions="FillAndExpand"
