--- a/BolWallet/Views/MainWithAccountPage.xaml
+++ b/BolWallet/Views/MainWithAccountPage.xaml
@@ -4,100 +4,101 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:MainWithAccountViewModel"
-    BackgroundColor="{DynamicResource SecondaryColor}">
-
+    BackgroundColor="{DynamicResource SecondaryColor}"
+	xmlns:Converters="clr-namespace:BolWallet.Converters">
+	
+	<ContentPage.Resources>
+		<Converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+	</ContentPage.Resources>
+	
 	<ScrollView>
 		<Grid
             Padding="{OnPlatform iOS='30,60,30,30',
                                  Default='30'}"
-            RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
+            RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
             ColumnDefinitions="*,*,*"
             RowSpacing="25"
             ColumnSpacing="8">
 
-			<Label 
-				Grid.Row="0"
-                Grid.ColumnSpan="3" 
-				Text="Codename" 
-				TextColor="Black"/>
-			<Frame   
-				Grid.Row="1"
-                Grid.ColumnSpan="3" 
-				BackgroundColor="WhiteSmoke" 
-				Padding="10">
-				<Label Text="{Binding BolAccount.CodeName}" TextColor="Black">
-					<Label.GestureRecognizers>
-						<TapGestureRecognizer Tapped="OnTapCopy"/>
-					</Label.GestureRecognizers>
-				</Label>
-			</Frame>
+			<StackLayout Grid.Row="0" Grid.ColumnSpan="3" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Spacing="15" Padding="20">
+				<Label
+                    Text="Code Name"
+                    FontSize="18"
+                    TextColor="DarkSlateBlue" />
 
-			<Label 
-				Grid.Row="2"
-                Grid.ColumnSpan="3" 
-				Text="Total Balance" 
-				TextColor="Black"/>
-			<Frame   
-				Grid.Row="3"
-                Grid.ColumnSpan="3" 
-				BackgroundColor="WhiteSmoke" 
-				Padding="10">
-				<Label Text="{Binding BolAccount.TotalBalance}" TextColor="Black"/>
-			</Frame>
+				<Frame BackgroundColor="WhiteSmoke" Padding="10">
+					<Label Text="{Binding CodeName}" TextColor="Black">
+						<Label.GestureRecognizers>
+							<TapGestureRecognizer Tapped="OnTapCopy"/>
+						</Label.GestureRecognizers>
+					</Label>
+				</Frame>
 
-			<Button
-                Grid.Row="4"
-                Grid.ColumnSpan="3"
+				<Label
+                    Text="Main Address"
+                    FontSize="18"
+                    TextColor="DarkSlateBlue" />
+
+				<Frame BackgroundColor="WhiteSmoke" Padding="10">
+					<Label Text="{Binding MainAddress}" TextColor="Black">
+						<Label.GestureRecognizers>
+							<TapGestureRecognizer Tapped="OnTapCopy"/>
+						</Label.GestureRecognizers>
+					</Label>
+				</Frame>
+
+				<Label
+					Text="Total Balance"
+					FontSize="18"
+					TextColor="DarkSlateBlue" />	
+				<Frame   
+					BackgroundColor="WhiteSmoke" 
+					Padding="10">
+					<Label Text="{Binding BolAccount.TotalBalance}" TextColor="Black"/>
+				</Frame>
+
+				<Button
+			        IsVisible="{Binding IsRegistered, Converter={StaticResource InverseBooleanConverter}}"
+                    Command="{Binding RegisterCommand}"
+                    FontAttributes="Bold"
+                    FontSize="8"
+                    HorizontalOptions="FillAndExpand"
+                    Text="Register" />
+
+				<Button
+	                IsVisible="{Binding IsCertified, Converter={StaticResource InverseBooleanConverter}}"
+                    Command="{Binding NavigateToCertifyPageCommand}"
+                    FontAttributes="Bold"
+                    FontSize="8"
+                    Text="Certify" />       
+
+
+			</StackLayout>
+
+			<StackLayout IsVisible="{Binding IsCertified}" Grid.Row="1" Grid.ColumnSpan="3"  Spacing="15" Padding="20">
+				<Button
                 FontAttributes="Bold"
                 FontSize="8"
-                HorizontalOptions="FillAndExpand"
                 Text="{Binding AccountText}" />
 
-			<Button
-                Grid.Row="5"
-                Grid.ColumnSpan="3"
+				<Button
                 Command="{Binding NavigateToSendBolPageCommand}"
                 FontAttributes="Bold"
                 FontSize="8"
-                HorizontalOptions="FillAndExpand"
                 Text="{Binding SendText}" />
 
-			<Button
-                Grid.Row="6"
-                Grid.ColumnSpan="3"
-                Command="{Binding NavigateToRetrieveBolPageCommand}"
+				<Button
                 FontAttributes="Bold"
                 FontSize="8"
-                HorizontalOptions="FillAndExpand"
-                Text="{Binding RecieveText}" />
-
-			<Button
-                Grid.Row="7"
-                Grid.Column="0"
-                FontAttributes="Bold"
-                FontSize="8"
-                HorizontalOptions="FillAndExpand"
                 Command="{Binding ClaimCommand}"
                 Text="{Binding ClaimText}" />
 
-			<Button
-                Grid.Row="7"
-                Grid.Column="1"
-                Grid.ColumnSpan="2"
+				<Button
                 Command="{Binding NavigateToMoveClaimPageCommand}"
                 FontAttributes="Bold"
                 FontSize="8"
-                HorizontalOptions="FillAndExpand"
                 Text="{Binding MoveClaimText}" />
-
-			<Button
-                Grid.Row="8"
-                Grid.ColumnSpan="3"
-                Command="{Binding NavigateToBolCommunityPageCommand}"
-                FontAttributes="Bold"
-                FontSize="8"
-                HorizontalOptions="FillAndExpand"
-                Text="{Binding CommunityText}" />
+			</StackLayout>
 		</Grid>
 	</ScrollView>
 </ContentPage>
