--- a/BolWallet/Views/CertifyPage.xaml
+++ b/BolWallet/Views/CertifyPage.xaml
@@ -3,82 +3,95 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BolWallet.Views.CertifyPage"
 			 xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
+			 xmlns:helpers="clr-namespace:BolWallet.Helpers"
+			xmlns:Converters="clr-namespace:BolWallet.Converters"
              Title="Certify Your Account"
 			 BackgroundColor="{DynamicResource SecondaryColor}">
 
-	<StackLayout  Spacing="15" Padding="10" >
-		<Label
-		Text="Code Name"
-		FontSize="18"
-		TextColor="DarkSlateBlue" />
+	<ContentPage.Resources>
+		<Converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+	</ContentPage.Resources>
 
-		<Frame BackgroundColor="WhiteSmoke" Padding="10">
-			<Label Text="{Binding BolAccount.CodeName}" TextColor="Black">
-				<Label.GestureRecognizers>
-					<TapGestureRecognizer Tapped="OnTapCopy"/>
-				</Label.GestureRecognizers>
-			</Label>
-		</Frame>
-		<Label
-		Text="Total Balance"
-		FontSize="18"
-		TextColor="DarkSlateBlue" />
+	<StackLayout>
+		<StackLayout Spacing="15" Padding="10" Margin="10,10,20,10" >
+			<Label  Text="Refresh" VerticalTextAlignment="End" HorizontalTextAlignment="End" FontSize="Small"/>
 
-		<Frame BackgroundColor="WhiteSmoke" Padding="10">
-			<Label Text="{Binding BolAccount.TotalBalance,Mode=TwoWay}" TextColor="Black">
-				<Label.GestureRecognizers>
-					<TapGestureRecognizer Tapped="OnTapCopy"/>
-				</Label.GestureRecognizers>
-			</Label>
-		</Frame>
-		<Label
-		Text="Account Status"
-		FontSize="18"
-		TextColor="DarkSlateBlue" />
+			<ImageButton  Command="{Binding UpdateBolAccountCommand}" VerticalOptions="Start" HorizontalOptions="EndAndExpand">
+				<ImageButton.Source>
+					<FontImageSource 
+						FontFamily="MaterialIconsRegular"
+						Glyph="{x:Static helpers:Icons.Refresh}"
+						Color="Black"
+						/>
+				</ImageButton.Source>
+			</ImageButton>
+			<Label
+				Text="Code Name"
+				FontSize="18"
+				TextColor="DarkSlateBlue" />
 
-		<Frame BackgroundColor="WhiteSmoke" Padding="10">
-			<Label Text="{Binding BolAccount.AccountStatus}" TextColor="Black">
-				<Label.GestureRecognizers>
-					<TapGestureRecognizer Tapped="OnTapCopy"/>
-				</Label.GestureRecognizers>
-			</Label>
-		</Frame>
-		<Button 
-		Text="Select Mandatory Certifiers"
-		BackgroundColor="DarkSlateBlue"
-		TextColor="White"
-		Command="{Binding SelectMandatoryCertifiersCommand}"	/>
+			<Frame BackgroundColor="WhiteSmoke" Padding="10">
+				<Label Text="{Binding BolAccount.CodeName}" TextColor="Black">
+					<Label.GestureRecognizers>
+						<TapGestureRecognizer Tapped="OnTapCopy"/>
+					</Label.GestureRecognizers>
+				</Label>
+			</Frame>
 
-		<CollectionView  ItemsSource="{Binding MandatoryCertifiers}">
-			<CollectionView.ItemTemplate>
-				<DataTemplate>
-					<StackLayout  Padding="3">
-						<Frame BackgroundColor="WhiteSmoke" Padding="10">
-							<Label Text="{Binding Key}" TextColor="Black">
-								<Label.GestureRecognizers>
-									<TapGestureRecognizer Tapped="OnTapCopy" />
-								</Label.GestureRecognizers>
-							</Label>
-						</Frame>
-					</StackLayout>
-				</DataTemplate>
-			</CollectionView.ItemTemplate>
-		</CollectionView>
+			<Label
+				Text="Account Status"
+				FontSize="18"
+				TextColor="DarkSlateBlue" />
 
-		<Entry Placeholder="Paste Certifier Codename" Text="{Binding CertifierCodename, Mode=TwoWay}" PlaceholderColor="Black" BackgroundColor="#EDF2F7" TextColor="Black" Margin="0,0,0,10" />
+			<Frame BackgroundColor="WhiteSmoke" Padding="10">
+				<Label Text="{Binding BolAccount.AccountStatus}" TextColor="Black">
+					<Label.GestureRecognizers>
+						<TapGestureRecognizer Tapped="OnTapCopy"/>
+					</Label.GestureRecognizers>
+				</Label>
+			</Frame>
 
-		<Button 
-		Text="{Binding Certifications, StringFormat='Request Certification No.{0} out of 2'}"
-		BackgroundColor="DarkSlateBlue"
-		TextColor="White"
-		Command="{Binding RequestCertificationCommand}"	CommandParameter="{Binding CertifierCodename}"/>
+		</StackLayout>
 
-		<Button 
-		IsVisible="{Binding IsCertified}"
-		Text="Pay Certification Fees"
-		BackgroundColor="DarkSlateBlue"
-		TextColor="White"
-		Command="{Binding PayCertificationFeesCommand}"	/>
+		<StackLayout Spacing="15" Padding="10" IsVisible="{Binding IsCertified, Converter={StaticResource InverseBooleanConverter}}">
+
+			<Button 
+			Text="Select Mandatory Certifiers"
+			BackgroundColor="DarkSlateBlue"
+			TextColor="White"
+			Command="{Binding SelectMandatoryCertifiersCommand}"	/>
+
+			<CollectionView  ItemsSource="{Binding MandatoryCertifiers}">
+				<CollectionView.ItemTemplate>
+					<DataTemplate>
+						<StackLayout  Padding="3">
+							<Frame BackgroundColor="WhiteSmoke" Padding="10">
+								<Label Text="{Binding Key}" TextColor="Black">
+									<Label.GestureRecognizers>
+										<TapGestureRecognizer Tapped="OnTapCopy" />
+									</Label.GestureRecognizers>
+								</Label>
+							</Frame>
+						</StackLayout>
+					</DataTemplate>
+				</CollectionView.ItemTemplate>
+			</CollectionView>
+
+			<Entry Placeholder="Paste Certifier Codename" Text="{Binding CertifierCodename, Mode=TwoWay}" PlaceholderColor="Black" BackgroundColor="#EDF2F7" TextColor="Black" Margin="0,0,0,10" />
+
+			<Button 
+			Text="{Binding Certifications, StringFormat='Request Certification No.{0} out of 2'}"
+			BackgroundColor="DarkSlateBlue"
+			TextColor="White"
+			Command="{Binding RequestCertificationCommand}"	CommandParameter="{Binding CertifierCodename}"/>
+		</StackLayout>
+		<Button
+			HorizontalOptions="Center"
+			IsVisible="{Binding IsCertified}"
+			Text="Pay Certification Fees"
+			BackgroundColor="DarkSlateBlue"
+			TextColor="White"
+			Command="{Binding PayCertificationFeesCommand}"	/>
 
 	</StackLayout>
 
