--- a/BolWallet/Views/MainWithAccountPage.xaml
+++ b/BolWallet/Views/MainWithAccountPage.xaml
@@ -5,7 +5,9 @@
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:MainWithAccountViewModel"
     BackgroundColor="{DynamicResource SecondaryColor}"
-	xmlns:Converters="clr-namespace:BolWallet.Converters">
+	xmlns:Converters="clr-namespace:BolWallet.Converters"
+	xmlns:helpers="clr-namespace:BolWallet.Helpers"
+	Title="Account Main Page">
 	
 	<ContentPage.Resources>
 		<Converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
@@ -19,8 +21,22 @@
             ColumnDefinitions="*,*,*"
             RowSpacing="25"
             ColumnSpacing="8">
+		
 
 			<StackLayout Grid.Row="0" Grid.ColumnSpan="3" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Spacing="15" Padding="20">
+				
+				<Label Text="Refresh" VerticalTextAlignment="End" HorizontalTextAlignment="End" FontSize="Small"/>
+
+				<ImageButton  Command="{Binding UpdateBolAccountCommand}" VerticalOptions="Start" HorizontalOptions="EndAndExpand">
+					<ImageButton.Source>
+						<FontImageSource 
+						FontFamily="MaterialIconsRegular"
+						Glyph="{x:Static helpers:Icons.Refresh}"
+						Color="Black"
+						/>
+					</ImageButton.Source>
+				</ImageButton>
+
 				<Label
                     Text="Code Name"
                     FontSize="18"
@@ -57,19 +73,32 @@
 					<Label Text="{Binding BolAccount.TotalBalance}" TextColor="Black"/>
 				</Frame>
 
+				<Label
+					Text="Account Status"
+					FontSize="18"
+					TextColor="DarkSlateBlue" />
+
+				<Frame BackgroundColor="WhiteSmoke" Padding="10">
+					<Label Text="{Binding BolAccount.AccountStatus}" TextColor="Black">
+						<Label.GestureRecognizers>
+							<TapGestureRecognizer Tapped="OnTapCopy"/>
+						</Label.GestureRecognizers>
+					</Label>
+				</Frame>
+
 				<Button
 			        IsVisible="{Binding IsRegistered, Converter={StaticResource InverseBooleanConverter}}"
                     Command="{Binding RegisterCommand}"
-                    FontAttributes="Bold"
-                    FontSize="8"
+					BackgroundColor="DarkSlateBlue"
+					TextColor="White"
                     HorizontalOptions="FillAndExpand"
                     Text="Register" />
 
 				<Button
 	                IsVisible="{Binding IsCertified, Converter={StaticResource InverseBooleanConverter}}"
                     Command="{Binding NavigateToCertifyPageCommand}"
-                    FontAttributes="Bold"
-                    FontSize="8"
+					BackgroundColor="DarkSlateBlue"
+					TextColor="White"
                     Text="Certify" />       
 
 
