Convert input amount to actual bol

--- a/BolWallet/Views/MoveClaimPage.xaml
+++ b/BolWallet/Views/MoveClaimPage.xaml
@@ -8,37 +8,37 @@
     x:DataType="viewModels:MoveClaimViewModel"
     BackgroundColor="{DynamicResource SecondaryColor}">
 
-    <ContentPage.Resources>
-        <StyleSheet>
-            <![CDATA[
+	<ContentPage.Resources>
+		<StyleSheet>
+			<![CDATA[
             .border-style {
                 background-color: lightgray;
             }
             ]]>
-        </StyleSheet>
-        <ResourceDictionary>
+		</StyleSheet>
+		<ResourceDictionary>
 
-            <Style TargetType="controls1:ExtendedTextEdit">
-                <Setter Property="ClearIconVisibility" Value="Never" />
-                <Setter Property="HorizontalOptions" Value="Fill" />
-                <Setter Property="IsErrorIconVisible" Value="False" />
-                <Setter Property="BoxHeight" Value="56" />
-                <Setter Property="FontSize" Value="18" />
-            </Style>
+			<Style TargetType="controls1:ExtendedTextEdit">
+				<Setter Property="ClearIconVisibility" Value="Never" />
+				<Setter Property="HorizontalOptions" Value="Fill" />
+				<Setter Property="IsErrorIconVisible" Value="False" />
+				<Setter Property="BoxHeight" Value="56" />
+				<Setter Property="FontSize" Value="18" />
+			</Style>
 
-            <Color x:Key="FocusedColor">#718792</Color>
+			<Color x:Key="FocusedColor">#718792</Color>
 
-        </ResourceDictionary>
-    </ContentPage.Resources>
+		</ResourceDictionary>
+	</ContentPage.Resources>
 
-    <ScrollView>
-        <Grid
+	<ScrollView>
+		<Grid
             Padding="{OnPlatform iOS='30,60,30,30',
                                  Default='30'}"
             RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
             RowSpacing="25">
 
-            <Label
+			<Label
                 Grid.Row="0"
                 FontSize="32"
                 HorizontalOptions="Center"
@@ -51,7 +51,7 @@
                 Grid.ColumnSpan="3" 
 	            Text="Total Balance" 
 	            TextColor="Black"/>
-			            <Frame   
+			<Frame   
 	            Grid.Row="2"
                 Grid.ColumnSpan="3" 
 	            BackgroundColor="WhiteSmoke" 
@@ -63,18 +63,19 @@
                 Grid.Row="3"
                 Title="Commercial Address" 
                 ItemsSource="{Binding CommercialBalancesDisplayList}"
-                SelectedIndex="{Binding SelectedCommercialAddressIndex}" >       
+                SelectedIndex="{Binding SelectedCommercialAddressIndex}" >
 			</Picker>
 
-            <controls1:ExtendedTextEdit 
+			<controls1:ExtendedTextEdit 
                     Grid.Row="4"
                     LabelText="{Binding AmountText}"
                     Text="{Binding MoveClaimForm.Amount, Mode=TwoWay}"
                     TextTransform="Uppercase"/>
 
-            <Label Grid.Row="5" Text="{Binding ResultLabel}"/>
 
-            <Button
+			<Entry Grid.Row="5" Text="{Binding MoveClaimForm.ActualAmount}" PlaceholderColor="Black" IsEnabled="False" BackgroundColor="#EDF2F7" TextColor="Black" Margin="0,0,0,10" />
+
+			<Button
                 Grid.Row="6"
                 Command="{Binding MoveClaimCommand}"
                 FontAttributes="Bold"
@@ -82,6 +83,6 @@
                 HorizontalOptions="FillAndExpand"
                 Text="{Binding MoveText}" />
 
-        </Grid>
-    </ScrollView>
+		</Grid>
+	</ScrollView>
 </ContentPage>    
