--- a/BolWallet/Views/MoveClaimPage.xaml
+++ b/BolWallet/Views/MoveClaimPage.xaml
@@ -44,7 +44,7 @@
                 HorizontalOptions="Center"
                 HorizontalTextAlignment="Center"
                 SemanticProperties.HeadingLevel="Level1"
-                Text="{Binding MoveClaimLabel}" />
+                Text="Transfer Claim" />
 
 			<Label 
 	            Grid.Row="1"
@@ -91,7 +91,7 @@
                 FontAttributes="Bold"
                 FontSize="8"
                 HorizontalOptions="FillAndExpand"
-                Text="{Binding MoveText}" />
+                Text="Transfer" />
 
 		</Grid>
 	</ScrollView>
